# smarthome

./: .dockerignore  .env.filterline  .imdoneignore  README.md  Untitled-1  docker-bake.hcl  docker-compose.yml  docker-registry-config.yml  imdone-tasks.md  obsidian.py  run.py  smarthome.code-workspace  tasks.py  todo.md  vscode.code-workspace
db/: .flake8  Dockerfile  README.md  init.sql  pyproject.toml
db/alembic/: env.py
db/alembic/versions/: 24ae55f84c58_entity_table.py
db/db/: __init__.py  connection_string.py  test.py
db/db/conf/: __init__.py  database.py  models.py
db/db/data/: __init__.py  crud.py  database.py  models.py  psycopg_adapters.py  session.py  timescaledb.py  typings.py
db/db/data/crud/: __init__.py  const.py  crud_rows.py
db/db/data/crud/utils/: divide_chunks.py
db/db/data/models/: __init__.py  enums.py  format_psycopg.py  row.py
db/dbeaver/.dbeaver/: credentials-config.json
db/tests/: conftest.py  connection_string_test.py
db/tests/data/: crud_test.py  database_test.py  session_test.py
db/tests/data/models/: format_parameters_test.py
db/typings/shared/: settings.pyi
docs/: README.md  env.values.json  pyproject.toml  todo.md  Описание.md  Установка.md
docs/design/: smarthome-prototype.sketch  spark-ux-library-jesse-wallace.sketch
docs/dia_dist/: c4.puml
docs/dia_src/: c4.py  network.py
docs/diagrams/in/: c4.py  db_conf.py  network.py
docs/docs/dia_dist/: c4.puml
docs/sphinx/in/: conf.py  db.conf.rst  db.rst  driver_deconz.deconz.rst  driver_deconz.sensors.rst  index.rst  modules.rst  shared.rst
driver_deconz/: .flake8  Dockerfile  README.md  __init__.py  deconz.py  pyproject.toml
driver_deconz/driver_deconz/: __init__.py  __main__.py  api.py  deconz.py  sensors.py  start.py
driver_deconz/driver_deconz/api/: api_task.py  dependencies.py  depends.py  main.py
driver_deconz/driver_deconz/deconz/: api.py  api_full_state_parse.py  deconz.py  exceptions.py  main.py  sensor.py  sensor_types.py  sensors.py  sensors2.py  sensors_collection.py  websocket.py  websocket_buffer.py
driver_deconz/driver_deconz/deconz/sensors/: __init__.py  base_sensor.py  daylight.py  humidity.py  light_level.py  open_close.py  presence.py  pressure.py  sensor_types.py  sensors_collection.py  temperature.py
driver_deconz/tests/: conftest.py  test_api.py
driver_deconz/tests/deconz/: api_test.py  full_state_response.json  websocket_buffer_test.py
driver_deconz/tests/redis/: redis_test.py
redis_to_db/: Dockerfile  pyproject.toml
redis_to_db/redis_to_db/: __main__.py  message_to_db_rows.py
setup/: .flake8  .gitignore  Dockerfile  README.md  env.schema.json  main.py  pyproject.toml  run.example.py
setup/setup/: __init__.py  _shared.py  code_sync.py  docker_move_images.py  docker_tasks.py  local_tasks.py  main.py  ng_build.py  poetry.py  simple_command.py  systemd.py  user_intercation.py
setup/setup/internal/: base_task.py  compose_task.py
setup/setup/tasks/: call_func.py  code_sync.py  docker_install.py  docker_move_images.py  docker_tasks.py  main.py  poetry.py  port_redirect.py  postgresql_install.py  remote_command.py  simple_command.py  systemd.py
setup/src/: cmd_in_dir.py  env.py  https_certificate.py  pgadmin.py  poetry.py  portainer.py
shared/: .flake8  .gitignore  Dockerfile  README.md  conf.py  pyproject.toml
shared/docs/sphinx/: index.rst
shared/docs/sphinx_in/: conf.py  shared.rst
shared/docs/sphinx_in1/: objects.inv
shared/shared/: __init__.py  debugger.py  logger.py  settings.py
shared/shared/async_tasks/: __init__.py  tasks_protocol.py  tasks_runner.py
shared/shared/fastapi/: __init__.py  base_api.py  base_dependencies.py
shared/shared/logger/: logger.py  stream_formatter.py
shared/shared/messagebus/: __init__.py  massagebus.py  protocols.py
shared/shared/messages/: __init__.py  base_message.py  binary_sensor.py  messages.py  open_close_sensor.py  register_message.py  temperature_sensor.py
shared/shared/patterns/: __init__.py  singleton.py
shared/shared/redis_publisher/: __init__.py  redis_publisher.py
shared/shared/redis_subscriber/: __init__.py  redis_subscriber.py  subs_collection.py
shared/shared/settings/: __init__.py  const.py  create_env.py  schema.py  settings.py
shared/shared/simple_deque/: __init__.py  protocols.py  simple_deque.py
shared/shared/tasks_runner/: __init__.py  protocols.py  tasks_runner.py
shared/tests/: conftest.py  test_redis_publisher.py
shared/tests/messages_test/: register_test.py
shared/tests/subs_collecton_test/: subs_collecton_test.py
src/server/: .env  .flake8  .gitignore  pyproject.toml  start.py  temp.json
src/server/docs/: conf.py
src/server/docs/_build/doctrees/: index.doctree  modules.doctree  src.deconz.doctree  src.doctree
src/server/docs/_build/html/: .buildinfo  genindex.html  objects.inv  py-modindex.html  search.html
src/server/src/: main.py
src/server/src/api/: api_devices.py  main.py
src/server/src/base/: __init__.py  logic.py  signals.py  types.py
src/server/src/deconz/: api.py  deconz.py  models.py  schemas.py  sensors.py
src/server/src/devices/: __init__.py  main.py
src/server/src/utils/: logger.py  settings.py
src/server/src/yeelight/: __init__.py  main.py
src/server/thunder-tests/: thunderActivity.json  thunderCollection.json  thunderEnvironment.json  thunderclient.json
src/server/typings/uvicorn/: _subprocess.pyi  _types.pyi  config.pyi  logging.pyi  main.pyi  server.pyi  workers.pyi
src/server/typings/uvicorn/middleware/: asgi2.pyi  debug.pyi  message_logger.pyi  proxy_headers.pyi  wsgi.pyi
src/server/typings/uvicorn/protocols/: utils.pyi
src/server/typings/uvicorn/supervisors/: __init__.pyi  (+5 more)
src/setup/: .flake8  Dockerfile  README.md  main.py  pyproject.toml
src/setup/scripts/: poetry.sh  python.sh  systemd.py
src/setup/src/: __init__.py  call_func.py  const.py  docker_tasks.py  env.py  main.py  ng_build.py  ng_dist.py  poetry.py  port_redirect.py  portainer.py  postgresql.py  python.py  systemd.py  tauri_build.py  timescaledb.py
src/shared/: Dockerfile  README.md  pyproject.toml
(+161 files in other folders)
