
[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
line-length = 80


[tool.poe.tasks.diagrams]
script = "konstantin_docs.main:generate_images('diagrams/in', 'diagrams/out')"

[tool.poe.tasks.sphinx]
shell = """poetry run sphinx-apidoc -f --separate -o sphinx/in ../shared \
    && poetry run sphinx-apidoc -f --separate -o sphinx/in ../db \
    && poetry run sphinx-apidoc -f --separate -o sphinx/in ../driver_deconz \
    && poetry run sphinx-build -b html sphinx/in sphinx/out
"""

[tool.poe.tasks.update_stubs]
shell = """rm -rf .venv/typings/konstantin_docs \
    && pyright --createstub konstantin_docs
"""


[tool.poetry]
authors = ["konstantin-dudersky <konstantin.dudersky@gmail.com>"]
description = ""
name = "smarthome-docs"
version = "0.0.1"


[tool.poetry.dependencies]
python = "^3.10"

konstantin-docs = "*"
poethepoet = "*"
pydata-sphinx-theme = "*"
sphinx = "*"

shared = { path = "../shared", develop = true }
db = { path = "../db", develop = true }
driver_deconz = { path = "../driver_deconz", develop = true }

[tool.poetry.group.dev.dependencies]
black = "*"


[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = true
stubPath = '.venv/typings'
typeCheckingMode = "strict"
