[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 80


[tool.poe.tasks.update_stubs]
shell = """rm -rf .venv/typings \
    && pyright --createstub shared
"""


[tool.poetry]
name = "driver-deconz"
version = "0.0.1"
description = ""
authors = ["konstantin-dudersky <konstantin.dudersky@gmail.com>"]
readme = "README.md"
packages = [{ include = "driver_deconz" }]


[tool.poetry.dependencies]
python = "3.11.*"

httpx = "0.23.1"
websockets = "10.4"

shared = { path = "../shared", develop = true }


[tool.poetry.group.dev.dependencies]
black = "*"
poethepoet = "*"
pytest = "*"
pytest-httpx = "0.21.2"
wemake-python-styleguide = "*"


[tool.poetry.scripts]
start = "driver_deconz.__main__:main"


[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = true
stubPath = '.venv/typings/'
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"


[tool.pytest.ini_options]
testpaths = ["tests"]
log_format = "%(levelname)s: %(asctime)s.%(msecs)03d | %(name)s:%(lineno)d - %(funcName)s\n-> %(message)s"
log_date_format = "%H:%M:%S"
