[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
line-length = 80


[tool.poetry]
authors = ["konstantin-dudersky <konstantin.dudersky@gmail.com>"]
description = "Скрипты установки"
name = "setup"
version = "0.0.2"


[tool.poetry.dependencies]
python = "3.11"

shared = { path = "../shared", develop = true }


[tool.poetry.group.dev.dependencies]
black = "*"
wemake-python-styleguide = "0.17.0"


[tool.poetry.scripts]
create_env = "setup.local_tasks:create_env"


[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = true
stubPath = '.venv/typings'
typeCheckingMode = "strict"
