[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 80


[tool.poetry]
name = "shared"
version = "0.0.1"
description = ""
authors = ["konstantin-dudersky <konstantin.dudersky@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.*"

debugpy = "1.6.6"
email-validator = "1.3.1"
fastapi = "0.92.0"
pydantic = "1.10.5"
python-dotenv = "0.21.1"
redis = "4.5.1"
uvicorn = "0.20.0"


[tool.poetry.group.dev.dependencies]
black = "*"
pandas-stubs = "*"
poethepoet = "0.16.5"
wemake-python-styleguide = "0.17.0"


[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = true
stubPath = '.venv/typings/'
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
