[tool.poetry]
authors = ["Konstantin-Dudersky <Konstantin.Dudersky@gmail.com>"]
description = ""
name = "smarthome"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "0.78.0"
httpx = "0.23.0"
poethepoet = "*"
python = "3.10.*"
python-dotenv = "0.20.0"
python-telegram-bot-raw = "20.0a2"
sqlalchemy = "1.4.39"
uvicorn = "0.18.2"
websockets = "10.3"

[tool.poetry.dev-dependencies]
black = "*"
darglint = "*"
flake8 = "*"
flake8-annotations = "*"
flake8-broken-line = "*"
flake8-class-attributes-order = "*"
flake8-commas = "*"
flake8-docstrings = "*"
flake8-import-order = "*"
flake8-multiline-containers = "*"
flake8-print = "*"
flake8-return = "*"
flake8-variables-names = "*"
pep8-naming = "*"
pydata-sphinx-theme = "*"
pylint = "*"
sphinx = "*"

[tool.black]
line-length = 79

[tool.poe.tasks]
create_env = {script = "src.utils.settings:create_env"}
docs = {shell = "sphinx-apidoc --force -o docs src && cd docs && make html"}
lint = ["lint_flake8", "lint_pyright"]
lint_flake8 = {shell = 'flake8 src/'}
lint_pyright = {shell = 'pyright src/'}# npm install --global pyright
main = {script = "src.main:main"}

[tool.pylint.BASIC]
good-names = ['db', 'ws']

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
